--- a/index.html
+++ b/index.html
@@ -46,27 +46,21 @@ console.log(userGuess);
 function randomLetter() {
   var randomLetter = (Math.floor(Math.random * alphabet.length))
   hidden = alphabent[index];
-}
 
 
 if (userGuess = randomLetter) {
+}
+  if ((userGuess = randomLetter)){
   wins++;
   alert("Wins: " + wins);
-};
-
-if (userGuess != randomLetter) {
-  guesses--;
-  alert("Guesses Left " + guesses);
-};
-
-if (guesses == 0) {
-  losses++;
-  guesses = 10;
-  alert("Losses " + losses);
-};
-
-
-} // this bracket closes the document.onkeyup at the top.
+  } else if((userGuess != randomLetter)) {
+    guesses--;
+    alert("Guesses Left: " + guesses);
+  } else (guesses = 0) 
+    losses++;
+    guesses = 10;
+    alert("Losses: " + losses);
+  };
 
 
 
