--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
  <script src="assets/javascript/game.js"></script> 
 <div id="no-touch">
-   <h1>I'm thinking of a number. Can you guess what it is?
+   <h1>I'm thinking of a letter. Can you guess what it is?
   <div>
  <div id="game"></div>
- 
+ <div id="guessed"></div>
 </body>
 </html>
